| Bug #58172 | Column performance_schema.threads.processlist_time out of range | ||
|---|---|---|---|
| Submitted: | 13 Nov 2010 7:10 | Modified: | 4 Jan 2011 8:11 |
| Reporter: | Alexander Nozdrin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Performance Schema | Severity: | S3 (Non-critical) |
| Version: | 5.6 (Erica) | OS: | Any |
| Assigned to: | Marc ALFF | CPU Architecture: | Any |
| Tags: | experimental, pb2, sporadic, test failure | ||
[13 Nov 2010 7:11]
Alexander Nozdrin
The test case has been marked experimental due to this bug.
[2 Dec 2010 8:07]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/125752 3406 Marc Alff 2010-12-02 Bug#58172 Column performance_schema.threads.processlist_time out of range Before this fix, the column processlist_time in table performance_schema.threads could receive out of range values. Some negative time was computed, because timers may have some drift and are not guaranteed to be always monotonous. This fix replaces negative time values with 0, to correct the data, and make the data fit into an unsigned column.
[3 Dec 2010 1:14]
Christopher Powers
Patch approved.
[3 Dec 2010 8:52]
Marc ALFF
Pushed into: - mysql-trunk-bugfixing
[5 Dec 2010 12:40]
Bugs System
Pushed into mysql-trunk 5.6.1 (revid:alexander.nozdrin@oracle.com-20101205122447-6x94l4fmslpbttxj) (version source revid:alexander.nozdrin@oracle.com-20101205122447-6x94l4fmslpbttxj) (merge vers: 5.6.1) (pib:23)
[11 Dec 2010 17:05]
Paul DuBois
Bug not present in any 5.6.x release. No changelog entry needed.
[22 Dec 2010 7:40]
Anitha Gopi
Re opening since the test is still in default.experimental collection. Please move it out if the test is passing
[4 Jan 2011 8:11]
Marc ALFF
Cleaned up default.experimental. Re closing.

Description: perfschema.func_file_io [ fail ] Test ended at 2010-11-12 15:59:59 CURRENT_TEST: perfschema.func_file_io --- /export/home/pb2/test/sb_0-2519939-1289568614.58/mysql-5.6.99-m5-linux-i686-test/mysql-test/suite/perfschema/r/func_file_io.result 2010-11-12 15:33:03.000000000 +0300 +++ /export/home/pb2/test/sb_0-2519939-1289568614.58/mysql-5.6.99-m5-linux-i686-test/mysql-test/suite/perfschema/r/func_file_io.reject 2010-11-12 17:59:59.000000000 +0300 @@ -3,6 +3,8 @@ WHERE name LIKE 'wait/io/file/%'; update performance_schema.threads SET instrumented = 'YES' WHERE PROCESSLIST_ID=connection_id(); +Warnings: +Warning 1264 Out of range value for column 'PROCESSLIST_TIME' at row 10 DROP TABLE IF EXISTS t1; CREATE TABLE t1 (id INT PRIMARY KEY, b CHAR(100) DEFAULT 'initial value') ENGINE=MyISAM; mysqltest: Result content mismatch - saving '/export/home/pb2/test/sb_0-2519939-1289568614.58/mysql-5.6.99-m5-linux-i686-test/mysql-test/var-ps_row/log/perfschema.func_file_io/' to '/export/home/pb2/test/sb_0-2519939-1289568614.58/mysql-5.6.99-m5-linux-i686-test/mysql-test/var-ps_row/log/perfschema.func_file_io/' Retrying test perfschema.func_file_io, attempt(2/3)... perfschema.func_file_io [ retry-pass ] 70 Retrying test perfschema.func_file_io, attempt(3/3)... perfschema.func_file_io [ retry-pass ] 105 How to repeat: XRef: http://pb2.norway.sun.com/?template=mysql_show_test_failure&test_failure_id=&test_output_i...